test/Fail/OverlapMultiple.err
OverlapMultiple.agda:8.1-21: error: [DuplicateOverlapPragma]
The instance x was already marked OVERLAPPING. This INCOHERENT
pragma can not be applied to it.
when checking the pragma INCOHERENT [x]
